# LookFace

./: README.md
headpose/kcfTracker/includes/cf_libs/dsst/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
headpose/kcfTracker/includes/cf_libs/kcf/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
headpose/kcfTracker/test/: CMakeLists.txt  main_dsst.cpp
headpose/pico/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
headpose/pico/includes/: pico.h
headpose/pico/src/: pico.cpp
headpose/pico/src/rnt/: pico.cpp  pico.h
headpose/pico/src/rnt/sample/: makefile  pico
headpose/pico/test/: CMakeLists.txt  sample.cpp
headpose/rlbf/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  readme.md
headpose/rlbf/Model_helen/: Model_0_regressor.txt  Model_1_regressor.txt  Model_2_regressor.txt  Model_3_regressor.txt  Model_4_regressor.txt  Model_5_regressor.txt  Model_params.txt
headpose/rlbf/Model_helen/Model_0/: 0_linear_x.txt  0_linear_y.txt  10_linear_x.txt  10_linear_y.txt  11_linear_x.txt  11_linear_y.txt  12_linear_x.txt  12_linear_y.txt  13_linear_x.txt  13_linear_y.txt  14_linear_x.txt  14_linear_y.txt  15_linear_x.txt  15_linear_y.txt  16_linear_x.txt  16_linear_y.txt  17_linear_x.txt  17_linear_y.txt  18_linear_x.txt  18_linear_y.txt  19_linear_x.txt  19_linear_y.txt  1_linear_x.txt  1_linear_y.txt  20_linear_x.txt  20_linear_y.txt  21_linear_x.txt  21_linear_y.txt  22_linear_x.txt  22_linear_y.txt  23_linear_x.txt  23_linear_y.txt  24_linear_x.txt  24_linear_y.txt  25_linear_x.txt  25_linear_y.txt  26_linear_x.txt  26_linear_y.txt  27_linear_x.txt  27_linear_y.txt  (+96 more)
headpose/rlbf/Model_helen/Model_1/: 0_linear_x.txt  0_linear_y.txt  10_linear_x.txt  10_linear_y.txt  11_linear_x.txt  11_linear_y.txt  12_linear_x.txt  12_linear_y.txt  13_linear_x.txt  13_linear_y.txt  14_linear_x.txt  14_linear_y.txt  15_linear_x.txt  15_linear_y.txt  16_linear_x.txt  16_linear_y.txt  17_linear_x.txt  17_linear_y.txt  18_linear_x.txt  18_linear_y.txt  19_linear_x.txt  19_linear_y.txt  1_linear_x.txt  1_linear_y.txt  20_linear_x.txt  20_linear_y.txt  21_linear_x.txt  21_linear_y.txt  22_linear_x.txt  22_linear_y.txt  23_linear_x.txt  23_linear_y.txt  24_linear_x.txt  24_linear_y.txt  25_linear_x.txt  25_linear_y.txt  26_linear_x.txt  26_linear_y.txt  27_linear_x.txt  27_linear_y.txt  (+96 more)
headpose/rlbf/Model_helen/Model_2/: 0_linear_x.txt  0_linear_y.txt  10_linear_x.txt  10_linear_y.txt  11_linear_x.txt  11_linear_y.txt  12_linear_x.txt  12_linear_y.txt  13_linear_x.txt  13_linear_y.txt  14_linear_x.txt  14_linear_y.txt  15_linear_x.txt  15_linear_y.txt  16_linear_x.txt  16_linear_y.txt  17_linear_x.txt  17_linear_y.txt  18_linear_x.txt  18_linear_y.txt  19_linear_x.txt  19_linear_y.txt  1_linear_x.txt  1_linear_y.txt  20_linear_x.txt  20_linear_y.txt  21_linear_x.txt  21_linear_y.txt  22_linear_x.txt  22_linear_y.txt  23_linear_x.txt  23_linear_y.txt  24_linear_x.txt  24_linear_y.txt  25_linear_x.txt  25_linear_y.txt  26_linear_x.txt  26_linear_y.txt  27_linear_x.txt  27_linear_y.txt  (+96 more)
headpose/rlbf/Model_helen/Model_3/: 0_linear_x.txt  0_linear_y.txt  10_linear_x.txt  10_linear_y.txt  11_linear_x.txt  11_linear_y.txt  12_linear_x.txt  12_linear_y.txt  13_linear_x.txt  13_linear_y.txt  14_linear_x.txt  14_linear_y.txt  15_linear_x.txt  15_linear_y.txt  16_linear_x.txt  16_linear_y.txt  17_linear_x.txt  17_linear_y.txt  18_linear_x.txt  18_linear_y.txt  19_linear_x.txt  19_linear_y.txt  1_linear_x.txt  1_linear_y.txt  20_linear_x.txt  20_linear_y.txt  21_linear_x.txt  21_linear_y.txt  22_linear_x.txt  22_linear_y.txt  23_linear_x.txt  23_linear_y.txt  24_linear_x.txt  24_linear_y.txt  25_linear_x.txt  25_linear_y.txt  26_linear_x.txt  26_linear_y.txt  27_linear_x.txt  27_linear_y.txt  (+96 more)
headpose/rlbf/Model_helen/Model_4/: 0_linear_x.txt  0_linear_y.txt  10_linear_x.txt  10_linear_y.txt  11_linear_x.txt  11_linear_y.txt  12_linear_x.txt  12_linear_y.txt  13_linear_x.txt  13_linear_y.txt  14_linear_x.txt  14_linear_y.txt  15_linear_x.txt  15_linear_y.txt  16_linear_x.txt  16_linear_y.txt  17_linear_x.txt  17_linear_y.txt  18_linear_x.txt  18_linear_y.txt  19_linear_x.txt  19_linear_y.txt  1_linear_x.txt  1_linear_y.txt  20_linear_x.txt  20_linear_y.txt  21_linear_x.txt  21_linear_y.txt  22_linear_x.txt  22_linear_y.txt  23_linear_x.txt  23_linear_y.txt  24_linear_x.txt  24_linear_y.txt  25_linear_x.txt  25_linear_y.txt  26_linear_x.txt  26_linear_y.txt  27_linear_x.txt  27_linear_y.txt  (+96 more)
headpose/rlbf/Model_helen/Model_5/: 0_linear_x.txt  0_linear_y.txt  10_linear_x.txt  10_linear_y.txt  11_linear_x.txt  11_linear_y.txt  12_linear_x.txt  12_linear_y.txt  13_linear_x.txt  13_linear_y.txt  14_linear_x.txt  14_linear_y.txt  15_linear_x.txt  15_linear_y.txt  16_linear_x.txt  16_linear_y.txt  17_linear_x.txt  17_linear_y.txt  18_linear_x.txt  18_linear_y.txt  19_linear_x.txt  19_linear_y.txt  1_linear_x.txt  1_linear_y.txt  20_linear_x.txt  20_linear_y.txt  21_linear_x.txt  21_linear_y.txt  22_linear_x.txt  22_linear_y.txt  23_linear_x.txt  23_linear_y.txt  24_linear_x.txt  24_linear_y.txt  25_linear_x.txt  25_linear_y.txt  26_linear_x.txt  26_linear_y.txt  27_linear_x.txt  27_linear_y.txt  (+96 more)
headpose/rlbf/includes/: rlbf.h
headpose/rlbf/src/: rlbf.cpp  utils.cpp
headpose/rlbf/test/: CMakeLists.txt  test.cpp
